# boilerplate_asyncTaskScheduler

./: .clang-format  .clang-tidy  .clang-tidy-c  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: asyncTask.hpp  asyncTaskScheduler.hpp  event.hpp  iController.hpp  iUserData.hpp  scheduler.hpp  stopTimer.hpp
lib/: CMakeLists.txt  cstack.c  cstack.h
src/: CMakeLists.txt  asyncTaskScheduler.cpp  main.cpp  scheeduler.cpp
test/: CMakeLists.txt  catch_main.cpp  testCases.cpp  test_1.cpp
